# isl-box

./: .env_sample  LICENSE  README.md  direct-connet2.c  firmware-direct.c  init.sh  package-lock copy.json  package.json
.github/: FUNDING.yml
app/: aircall-auth.c  aircall-send.c  aircall-token.c
docs/: README.md
docs/aircall/: insight-card.py
isl-box/: .config  main.c  main2.c  main3.c
isl-box/Inc/: main.h  uart.h
isl-box/Src/: CMakeLists.txt  nRF9160.c  nRF9160_old.c  nrf9160.h  nrf_senddata.c  open_uart_device.c  prj.conf  stdint.h  tunnel.c  uart.c  usb-tunnel.scss  vnc2.h  vnc2.scss
isl-box/Src/aircall/: aircall-oauth.js  aircall.c  getGeoLocation copy.c  getGeoLocation.c  init_LTE_modem.c  init_TLS_credentials.c  main.c
isl-box/Src/nrf9610/: example.c  example2.c  example3.c  example4.c  mutex.c
isl-box/lib/: UART_H_  USBHOST_H_  VOS_H_  configurations.c  controltransfer.c  endpoints.c  incomingdata.c  interrupttransfer.c  interrupttransfer2.c  ioctl.h  responsestaments copy.c  responsestaments.c  semaphore.c  setuptranfser.c  threadcontrol.c  usb.h  usb_hid.c  usb_hid.h  usbc.c  usbd copy.c  usbhost.c  usbhost.h  usbslave.h  vos.h
isl-box/net/: socket.h
pim/: amazon-categories-list.json  building-materials.json  google-taxonomy.json  home-and-garden.json  product-model.json  product.json  temp.php  temp2.php
